umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carboxylic_acids_aliphatic_malonic-acid.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :atoms ["C" "O#n2" "O#h#n2" "C#h2" "C" "O#n2" "O#h#n2"]
      :bonds [
        [0 1 :double]
        [0 2 :single]
        [0 3 :single]
        [3 4 :single]
        [4 5 :double]
        [4 6 :single]]}
    :success true
    :tie-breaks [2 3 6]}
  :atom-typing-strict {
    :success false
    :tie-breaks []
    :unresolved {
      2 ["O#h#n2#v#d0#t0#a!#m!" "O#n2#u#v#d0#t0#a!#m!"]
      3 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      6 ["O#h#n2#v#d0#t0#a!#m!" "O#n2#u#v#d0#t0#a!#m!"]}}
  :counts-most-saturated {
    :output {
      :atoms ["C" "O#n2" "O#h#n2" "C#h2" "C" "O#n2" "O#h#n2"]
      :bonds [
        [0 1 :double]
        [0 2 :single]
        [0 3 :single]
        [3 4 :single]
        [4 5 :double]
        [4 6 :single]]}
    :success true
    :tie-breaks [2 3 6]}
  :counts-strict {
    :success false
    :tie-breaks []
    :unresolved {
      2 ["O#n2#u#v#a!" "O#h#n2#v#a!"]
      3 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      6 ["O#n2#u#v#a!" "O#h#n2#v#a!"]}}}
