umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carboxylic_acids_aliphatic_methyl-formate.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :atoms ["C#h3" "O#n2" "C#h" "O#n2"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :double]]}
    :success true
    :tie-breaks [0 2]}
  :atom-typing-strict {
    :success false
    :tie-breaks []
    :unresolved {
      0 [
        "C#h3#v#d0#t0#a!#m!"
        "C#h2#u#v#d0#t0#a!#m!"
        "C#h#u2#v#d0#t0#a!#m!"
        "C#h#n#v#d0#t0#a!#m!"
        "C#n#u#v#d0#t0#a!#m!"
        "C#u3#v#d0#t0#a!#m!"]
      2 ["C#h#v3#d0#t0#a!#m!" "C#u#v3#d0#t0#a!#m!"]}}
  :counts-most-saturated {
    :output {
      :atoms ["C#h3" "O#n2" "C#h" "O#n2"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :double]]}
    :success true
    :tie-breaks [0 2]}
  :counts-strict {
    :success false
    :tie-breaks []
    :unresolved {
      0 ["C#n#u#v#a!" "C#h#n#v#a!" "C#h2#u#v#a!" "C#h3#v#a!"]
      2 ["C#u#v3#a!" "C#h#v3#a!"]}}}
